<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/home"
            android:title="@string/home"
            android:icon="@drawable/ic_action_home"/>

        <item android:id="@+id/bhamashah"
            android:title="@string/bhamashah"
            android:icon="@drawable/ic_action_bills"/>

        <item android:id="@+id/entitlement"
            android:title="@string/entitlement"
            android:icon="@drawable/ic_action_entitlements"/>
        <item android:id="@+id/bills"
            android:title="@string/bill"
            android:icon="@drawable/ic_action_bills"/>
        <item android:id="@+id/logout"
            android:title="@string/logout"
            android:icon="@drawable/ic_exit_to_app_black_24dp"/>
    </group>
</menu>