<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:elevation="0dp"
    android:foreground="?android:attr/selectableItemBackground"
    card_view:cardBackgroundColor="@android:color/white">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/entitlement_id"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tvEntitlementId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:background="@android:color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/entitlement_amount"
            android:layout_marginTop="5dp"
            android:textColor="@color/colorPrimaryDark"/>
        />
        <TextView
            android:id="@+id/tvEntitlementAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Amount"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/entitlement_due_date"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorPrimaryDark"/>
        <TextView
            android:id="@+id/tvEntitlementDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Date"/>
    </LinearLayout>
</android.support.v7.widget.CardView>