<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffffff">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/otp_string"
        android:textAlignment="center"
        android:padding="20dp"
        android:id="@+id/titleOTP"
        android:textSize="22sp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:id="@+id/view"
        android:layout_below="@+id/titleOTP"
        android:background="@android:color/black"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view"
        android:gravity="center"
        android:layout_margin="10dp"
        android:id="@+id/linearLayout">
        <EditText
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/key1"
            android:layout_margin="10dp"
            android:maxLength="1"
            android:inputType="number"
            android:textAlignment="center"/>
        <EditText
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/key2"
            android:layout_margin="10dp"
            android:maxLength="1"
            android:inputType="number"
            android:textAlignment="center"/>
        <EditText
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:id="@+id/key3"
            android:maxLength="1"
            android:inputType="number"
            android:textAlignment="center"/>
        <EditText
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:id="@+id/key4"
            android:maxLength="1"
            android:inputType="number"
            android:textAlignment="center"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:weightSum="2"
        android:background="@color/bg_screen1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/bCancel"
            android:textColor="@android:color/white"
            android:textSize="22sp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:layout_margin="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:id="@+id/bOK"
            android:textColor="@android:color/white"
            android:textSize="22sp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:layout_margin="10dp"/>
    </LinearLayout>

</RelativeLayout>